# Clotho

./: README.md  index.html  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/commands/: read-app-data.md
.github/workflows/: block-ai-authors.yml  build.yml
docs/: book.toml  plugin-sink-design.md
docs/prd/: overview.md
docs/prd/components/: description-editor.md  task-detail.md
docs/prd/views/: calendar.md  gantt.md  kanban.md  list.md  project-list.md
docs/src/: SUMMARY.md  introduction.md
docs/src/prd/: data-model.md  global-ui.md  overview.md
docs/src/tech/: review.md
docs/tauri-plugin-agent-runtime/: design.md  developer-guide.md  quickstart.md
docs/tech/: tech-stack.md
examples/cosmic-weather/: README.md  package.json
examples/cosmic-weather/src/: App.tsx  agent.ts
examples/cosmic-weather/src-tauri/: Cargo.toml
scripts/: convert-icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/agent-core/: Cargo.toml  README.md
src-tauri/crates/agent-core/src/: lib.rs
src-tauri/crates/clotho-adapter/: Cargo.toml
src-tauri/crates/clotho-adapter/src/: lib.rs
src-tauri/crates/clotho-domain/: Cargo.toml
src-tauri/crates/clotho-domain/src/: error.rs  image.rs  lib.rs  proposal.rs  proposal_execution.rs  tag.rs  task.rs
src-tauri/crates/clotho-domain/src/repository/: dependency_repository.rs  image_repository.rs  mod.rs  project_repository.rs  tag_repository.rs  task_repository.rs
src-tauri/crates/tauri-plugin-agent-runtime/: Cargo.toml  README.md  build.rs
src-tauri/crates/tauri-plugin-agent-runtime/permissions/: automation.toml  debug.toml  default.toml  operator.toml  read-only.toml
src-tauri/crates/tauri-plugin-agent-runtime/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-agent-runtime/permissions/autogenerated/commands/: cancel_turn.toml  create_thread.toml  get_runtime_catalog.toml  get_thread_snapshot.toml  list_config_files.toml  list_configs.toml  resolve_config.toml  resolve_config_profile.toml  start_turn.toml  submit_runtime_request.toml
src-tauri/crates/tauri-plugin-agent-runtime/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-agent-runtime/src/: audit.rs  catalog.rs  commands.rs  config.rs  db.rs  error.rs  events.rs  headless.rs  lib.rs  models.rs  runtime.rs  session.rs
src-tauri/crates/tauri-plugin-assistant-runtime/: Cargo.toml  README.md
src-tauri/crates/tauri-plugin-assistant-runtime/permissions/: default.toml
src-tauri/crates/tauri-plugin-assistant-runtime/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-assistant-runtime/permissions/autogenerated/commands/: list_threads.toml  resume_turn_stream.toml  submit_approval.toml
src-tauri/crates/tauri-plugin-assistant-runtime/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-assistant-runtime/src/: audit.rs  config.rs  events.rs  lib.rs  models.rs  native_tools.rs  proposal.rs
src-tauri/icons/: icon.icns
src-tauri/patches/winres/: lib.rs
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/assistant/: SOUL.md  automation.rs  config.rs  host_tools.rs  mod.rs  proposal.rs  runtime_host.rs
src-tauri/src/commands/: assistant.rs  dependency.rs  image.rs  mcp.rs  mod.rs  project.rs  settings.rs  tag.rs  task.rs
src-tauri/src/data/: task.rs
src-tauri/src/db/: init.rs  migrations.rs  mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/models/: image.rs  mod.rs  project.rs  tag.rs
src-tauri/src/repository/: mod.rs  project_repository.rs  tag_repository.rs  task_repository.rs
src/app/: App.tsx  router.tsx
src/app/routes/: __root.tsx  assistant.tsx  board.tsx  calendar.tsx  gantt.tsx  list.tsx  project-view.tsx  projects-index.tsx
src/components/assistant/: AssistantShell.tsx  ConversationPane.tsx  ThreadSidebar.tsx  TranscriptViewport.tsx  status-labels.ts
src/components/common/: ClothoLogo.tsx  ConfirmDialog.tsx  DateDisplay.tsx  EmptyState.tsx  ErrorBoundary.tsx  PriorityBadge.tsx  ProgressBar.tsx  RichTextEditor.tsx  SearchInput.tsx  SlashMenu.tsx  StatusBadge.tsx  TagChip.tsx
src/components/filter/: DateFilter.tsx  FilterToolbar.tsx  PriorityFilter.tsx  ProjectFilter.tsx  StatusFilter.tsx  TagFilter.tsx
src/components/layout/: MainContent.tsx  SettingsDialog.tsx  Sidebar.tsx  (+2 more)
src/hooks/: use-keyboard-shortcuts.ts  useResolvedMarkdown.ts
src/lib/: color.ts  constants.ts  date.ts
src/services/: assistant-runtime-client.ts  dependency-service.ts  image-service.ts  project-service.ts  settings-service.ts  tag-service.ts  task-service.ts
src/stores/: project-store.ts  settings-store.ts  tag-store.ts  task-store.ts  ui-store.ts
src/styles/: globals.css
src/types/: assistant-runtime.ts  dependency.ts  project.ts  settings.ts  tag.ts  task.ts
(+68 files in other folders)
