[package]
name = "clotho-domain"
version = "0.1.0"
edition = "2021"

[lib]
name = "clotho_domain"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
